<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_edit_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/colorDivider"
        />

    <EditText
        android:id="@+id/edt_fullname_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/imv_edit_profile"
        android:hint="@string/complete_name"
        android:drawableTint="@color/colorIcons"
        android:drawableRight="@drawable/ic_details"/>

    <EditText
        android:id="@+id/edt_nick_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_fullname_profile"
        android:layout_marginBottom="10dp"
        android:drawableTint="@color/colorIcons"
        android:drawableRight="@drawable/ic_account"
        android:hint="@string/user"/>

    <EditText
        android:id="@+id/edt_email_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_nick_profile"
        android:drawableTint="@color/colorIcons"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email"/>
</RelativeLayout>