<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlVerifySmsCodeLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/defaultBackgroundColor">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingLeft="@dimen/cw_horizontal_default_padding"
        app:contentPaddingRight="@dimen/cw_horizontal_default_padding"
        app:contentPaddingTop="@dimen/cw_vertical_default_padding"
        app:contentPaddingBottom="@dimen/cw_vertical_default_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txvInfoVerifySmsCodeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/txvInfoVerifySmsCodeLogin"
                android:textColor="@color/colorText"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txvNumberVeryfySmsCodeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/txvInfoVerifySmsCodeLogin"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txvInputVerifySmsCodeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/txvNumberVeryfySmsCodeLogin"
                android:text="@string/txvInputVerifySmsCodeLogin"
                android:textColor="@color/colorText"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/llInputVerifySmsCodeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/txvInputVerifySmsCodeLogin">

                <EditText
                    android:id="@+id/edtSecretCodeVerifySmsCodeLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:maxLength="10"
                    android:inputType="textCapCharacters"
                    />
                <Button
                    android:id="@+id/btnCheckSecretCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/white"
                    android:layout_weight="3"
                    android:text="Ver" />
            </LinearLayout>

            <Button
                android:id="@+id/btnOkVerifySmsCodeLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_below="@id/llInputVerifySmsCodeLogin"
                android:text="@string/verify_code"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>