<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <RelativeLayout
                android:id="@+id/rl_datetime_manage_event"
                android:layout_marginBottom="@dimen/cardView_top_margin_manage_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_rounded"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/rl_datetime_from_manage_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        >

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            >

                            <TextView
                                android:id="@+id/txv_title_time_from_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:text="@string/subHeaderFromManageEvent"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/txv_time_from_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:layout_below="@id/txv_title_time_from_manage_event"
                                android:textSize="25sp"
                                android:textColor="@color/colorText"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txv_date_from_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txv_time_from_manage_event"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"/>

                        </RelativeLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_datetime_arrow_manage_event"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_arrow_right"/>
                        </RelativeLayout>
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rl_datetime_to_manage_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            >

                            <TextView
                                android:id="@+id/txv_title_time_to_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:text="@string/subHeaderToManageEvent"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/txv_time_to_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txv_title_time_to_manage_event"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="5dp"
                                android:textSize="25sp"
                                android:textColor="@color/colorText"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txv_date_to_manage_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/txv_time_to_manage_event"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_data_manage_event"
                android:layout_marginBottom="@dimen/cardView_top_margin_manage_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_rounded">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_title_manage_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp">
                        <EditText
                            android:id="@+id/edt_title_manage_event"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tilTitleManageEvent"
                            android:textColorHint="@color/colorText"
                            android:textColor="@color/colorText"
                            android:textSize="25sp"
                            android:maxLength="20"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <EditText
                        android:id="@+id/edt_address_manage_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/til_title_manage_event"
                        android:textCursorDrawable="@null"
                        android:hint="@string/tilAddressManageEvent"
                        android:textColorHint="@color/colorText"
                        android:textColor="@color/colorText"
                        android:singleLine="true"
                        android:drawableRight="@drawable/ic_map_marker"
                        android:drawableTint="@color/colorIcons"
                        android:editable="false"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_description_manageEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edt_address_manage_event"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        >
                        <EditText
                            android:id="@+id/edt_description_manageEvent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tilDescriptionManageEvent"
                            android:textColorHint="@color/colorText"
                            android:textColor="@color/colorText"
                            android:lines="4"
                            android:gravity="top"
                            android:maxLength="150"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:id="@+id/spinner_categories_manage_event"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/til_description_manageEvent"
                        android:hint="@string/spinnerCategoriesManageEvent"
                        android:textColor="@color/colorText"
                        android:spinnerMode="dialog"/>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</merge>